--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <link rel="stylesheet" type="text/css" href="Style.css"
-<h1>Terve</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Etusivu</title>
+</head>
+<body>
+  <h1>Tervetuloa</h1>
+  <p>Tämä on HTML:n etusivu.</p>
+</body>
+</html>
