--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Etusivu</title>
-  <link rel="stylesheet" type="text/css" href="Style.css"
+    <title>Minun GitHub-sivuni</title>
 </head>
 <body>
-  <h1>Tervetuloa</h1>
-  <p>Tämä on HTML:n etusivu.</p>
+    <h1>Tervetuloa GitHub-sivulleni!</h1>
+    <p>Tämä on harjoitustehtävä.</p>
 </body>
 </html>
+
+ 
