--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="fi">
 <head>
-    <title>Minun GitHub-sivuni</title>
+    <meta charset="UTF-8">
+    <title>Ohjelmoinnin maailma</title>
 </head>
 <body>
-    <h1>Tervetuloa GitHub-sivulleni!</h1>
-    <p>Tämä on harjoitustehtävä.</p>
+    <h1>Tervetuloa ohjelmoinnin maailmaan!</h1>
+    <p>Tämä on esittelysivu HTML:stä, CSS:stä ja JavaScriptistä.</p>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+    </ol>
 </body>
 </html>
 
- 
