--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Ohjelmoinnin maailma</title>
+    <style>
+        h1 {
+            color: blue;
+        }
+        p {
+            font-size: 18px;
+        }
+        ol {
+            list-style-type: circle;
+        }
+    </style>
 </head>
 <body>
     <h1>Tervetuloa ohjelmoinnin maailmaan!</h1>
@@ -14,4 +25,3 @@
     </ol>
 </body>
 </html>
-
