--- a/index.html
+++ b/index.html
@@ -23,5 +23,12 @@
         <li>CSS</li>
         <li>JavaScript</li>
     </ol>
+    <button id="alertButton">Paina minua</button>
+    <script>
+        document.getElementById('alertButton').addEventListener('click', function() {
+            alert('Hei maailma!');
+        });
+    </script>
 </body>
 </html>
+
