--- a/Lomake.html
+++ b/Lomake.html
@@ -21,10 +21,23 @@
             cursor: pointer;
         }
     </style>
+    <script>
+        function validateForm() {
+            var name = document.getElementById('name').value;
+            var email = document.getElementById('email').value;
+            var age = document.getElementById('age').value;
+            
+            if (name == "" || email == "" || age == "") {
+                alert("Kaikki kentät on täytettävä!");
+                return false;
+            }
+            return true;
+        }
+    </script>
 </head>
 <body>
     <h1>Täytä lomake</h1>
-    <form>
+    <form onsubmit="return validateForm()">
         <label for="name">Nimi:</label>
         <input type="text" id="name" name="name">
         
